# COR-Predictor-CUDA

./: CMakeLists.txt  COR-anneal.cpp  COR-anneal.cu  COR-anneal.h  COR-anneal.hpp  COR-genetic.cpp  COR-genetic.cu  COR-genetic.h  COR-genetic.hpp  COR-main.cpp  COR-optimization.cpp  COR-optimization.cu  COR-optimization.h  COR-optimization.hpp  COR-predictor.cpp  COR-predictor.cu  COR-predictor.h  COR-predictor.hpp  Makefile  Makefile.txt  README.md  k-hArray.cpp  k-hArray.h  k-hArray.hpp  main.cpp
